tests/mut_let_rec_scope_leak.test
let rec f = fun x -> x + 1;
print x;
####
SyntaxError: Undefined variable
let rec f = fun x -> x + 1;
print x;
      ^
